syntax = "proto3";
package rpc;

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {
  // Empty success response, or include previous value if desired.
  // Leader redirection is handled via gRPC metadata (headers).
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
  bool found = 2;
}

service KeyValueService {
  rpc Put(PutRequest) returns (PutResponse);
  rpc Get(GetRequest) returns (GetResponse);
}
